--- a/client/src/site/App.css
+++ b/client/src/site/App.css
@@ -142,6 +142,10 @@
     text-decoration: underline;
 }
 
+.map {
+    background-color: #bbb;
+}
+
 button.btn {
     width: 160px;
     font-size: 10pt;
