--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <!--meta content="{{csrf}}" name="csrf-token" /-->
   <link rel="icon" href="{{ STATIC_URL }}/favicon.ico" type="image/x-icon" />
+  <style>{% include "style.css" %}</style>
   <!-- link href="{{ STATIC_URL }}/css/style.css" type="text/css" rel="stylesheet" /-->
   <script defer="defer" src="/client/{{ client_files.js }}"></script>
   {% if client_files.css %}<link href="/client/{{ client_files.css }}" rel="stylesheet">{% endif %}
