Add basic admin interface

--- a/client/src/site/App.css
+++ b/client/src/site/App.css
@@ -38,11 +38,15 @@
 }
 
 .error {
-    color: #f00;
+    color: var(--color-ui-error);
 }
 
 .left {
     text-align: left;
+}
+
+.nowrap {
+    white-space: nowrap;
 }
 
 .menu-container {
@@ -54,7 +58,7 @@
 .menu-box {
     margin: 25px 0;
     padding: 10px !important;
-    color: #fff;
+    color: var(--color-ui-text);
     font-size: 10pt;
     background-color: var(--color-ui-box);
     padding: 0 5px;
@@ -135,7 +139,7 @@
 
 .menu-list-row, .menu-list-title {
     padding: 8px;
-    color: #fff;
+    color: var(--color-ui-text);
 }
 
 .menu-list-row img {
@@ -182,7 +186,7 @@
 button.btn {
     width: 160px;
     font-size: 10pt;
-    color: #fff;
+    color: var(--color-ui-text);
     border-radius: 5px;
 }
 
@@ -198,4 +202,20 @@ button.btn-close {
     height: 15px;
     border: 2px solid #000;
     /*background-color: #000;*/
+}
+
+input.form-control {
+    color: var(--color-ui-text);
+    border: solid var(--color-ui-border) 1px;
+    background-color: var(--color-ui-input);
+    font-size: 10pt;
+}
+
+input.form-control:focus {
+    color: var(--color-ui-text);
+    background-color: var(--color-ui-input-focus);
+}
+
+input.form-control::placeholder {
+    color: var(--color-ui-text-shade);
 }
