--- a/client/src/site/App.css
+++ b/client/src/site/App.css
@@ -53,13 +53,19 @@
     overflow-wrap: break-word;
 }
 
+hr.delimeter {
+    color: var(--color-ui-border);
+    opacity: 0.70;
+    margin: 0.1rem 0 0.6rem 0;
+}
+
 .menu-container, .menu-container-full {
     background-color: var(--color-ui-box-hover);
     border: solid var(--color-ui-border) 2px;
     border-radius: 10px;
 }
 
-div.menu-container-full {
+div.menu-container-full, div.container-full {
     max-width: 100%;
 }
 
@@ -145,19 +151,19 @@ div.menu-container-full {
     padding: 0;
 }
 
-.menu-list-row, .menu-list-title {
+.menu-list-row, .menu-list-title, .menu-input-row {
     width: 100%;
-    padding: 8px;
+    padding: 6px;
     color: var(--color-ui-text);
+}
+
+.menu-list-row {
+    font-size: 10pt;
 }
 
 .menu-list-row img {
     width: 30px;
     height: 30px;
-}
-
-.menu-list-title {
-    border-bottom: 1px solid var(--color-ui-border);
 }
 
 .menu-list-row:hover {
@@ -170,8 +176,15 @@ div.menu-container-full {
 
 .menu-list-row > div.input-group > div,
     .menu-list-row > div,
-    .menu-list-title > div {
+    .menu-list-title > div,
+    .menu-input-row > div {
     align-self: center;
+}
+
+.menu-list-row > div button {
+    width: auto;
+    padding: 2px 5px;
+    font-size: 9pt;
 }
 
 .menu-absolute.container {
